--- a/app/article.html
+++ b/app/article.html
@@ -39,7 +39,7 @@
                                     Thus, a new model of organizational activity plays an important role in the formation of systems of mass participation. The significance of these problems is so obvious that the implementation of the planned targets contributes to the preparation and implementation of the appropriate activation conditions.
                                 </p>
                                 <p data-aos="fade-in">
-                                    Comrades! the existing structure of the organization plays an important role in shaping the appropriate conditions for activation. Ideological considerations of a higher order, as well as the beginning of everyday work on the formation of a position, provide a wide range of (specialists) participation in the formation of further development directions. It should not be forgotten, however, that consultation with a wide range of activists largely determines the creation of systems of mass participation.
+                                    Comrades! the existing structure of the organization plays an important role in shaping the appropriate conditions for activation. Ideological considerations of a higher order, as well as the beginning of <strong class="add-tag" data-id="tags-list-1">Name Name <button class="add-tag__btn" type="button"></button></strong> everyday work on the formation of a position, provide a wide range of (specialists) participation in the formation of further development directions. It should not be forgotten, however, that consultation with a wide range of activists largely determines the creation of systems of mass participation.
                                 </p>
                                 <p data-aos="fade-in">
                                     The task of the organization, in particular the strengthening and development of the structure, entails the process of introducing and modernizing the personnel training system, meets the urgent needs. Similarly, the established structure of the organization contributes to the preparation and implementation of directions for progressive development. The task of the organization, in particular the constant information and propaganda support of our activities, allows us to carry out important tasks in developing forms of development. The task of the organization, in particular the further development of various forms of activity, entails the process of introducing and modernizing the forms of development.
@@ -65,6 +65,9 @@
                                     </li>
                                 </ul>
                             </div>
+                            <div class="article__length">
+                                <b>2</b> article out of <b>97</b>
+                            </div>
                             <div class="article__nav" data-aos="fade-in">
                                 <a href="#" class="article__btn btn _light">
                                     Previous news
@@ -76,54 +79,139 @@
                         </div>
                         <aside class="article__aside">
                             <h2 class="article__aside--title" data-aos="fade-in">
-                                Similar articles
+                                Tags
                             </h2>
-                            <ul class="article__aside--list">
-                                <li class="article__aside--item article__item" data-aos="fade-left" data-aos-delay="200">
-                                    <h3 class="article__item--title">
-                                        Article title. Ultricies nec, pellentesque eu, pretium quis, sem. 
+                            <div class="article__aside--tags article__tags">
+                                <div class="article__tags--note">
+                                    Hover over text to add a tag
+                                </div>
+                                <div class="article__tags--item">
+                                    <h3 class="article__tags--min-title">
+                                        Company:
                                     </h3>
-                                    <div class="article__item--text">
-                                        Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc,
-                                    </div>
-                                    <a href="#" class="article__item--link">
-                                        Read
-                                    </a>
-                                </li>
-                                <li class="article__aside--item article__item" data-aos="fade-left" data-aos-delay="400">
-                                    <h3 class="article__item--title">
-                                        Article title. Ultricies nec, pellentesque eu, pretium quis, sem. 
+                                    <ul class="article__tags--list" id="tags-list-1">
+                                        <li class="article__tags--elem">
+                                            <span class="article__tags--name">
+                                                Woman
+                                            </span>
+                                            <button class="article__tags--close-btn" type="button"></button>
+                                            <button class="article__tags--edit-btn" type="button"></button>
+                                        </li>
+                                        <li class="article__tags--elem">
+                                            <span class="article__tags--name">
+                                                Development
+                                            </span>
+                                            <button class="article__tags--close-btn" type="button"></button>
+                                            <button class="article__tags--edit-btn" type="button"></button>
+                                        </li>
+                                        <li class="article__tags--elem">
+                                            <span class="article__tags--name">
+                                                Development
+                                            </span>
+                                            <button class="article__tags--close-btn" type="button"></button>
+                                            <button class="article__tags--edit-btn" type="button"></button>
+                                        </li>
+                                        <li class="article__tags--elem">
+                                            <span class="article__tags--name">
+                                                Woman
+                                            </span>
+                                            <button class="article__tags--close-btn" type="button"></button>
+                                            <button class="article__tags--edit-btn" type="button"></button>
+                                        </li>
+                                        <li class="article__tags--elem">
+                                            <span class="article__tags--name">
+                                                Woman
+                                            </span>
+                                            <button class="article__tags--close-btn" type="button"></button>
+                                            <button class="article__tags--edit-btn" type="button"></button>
+                                        </li>
+                                        <li class="article__tags--elem">
+                                            <span class="article__tags--name">
+                                                Development
+                                            </span>
+                                            <button class="article__tags--close-btn" type="button"></button>
+                                            <button class="article__tags--edit-btn" type="button"></button>
+                                        </li>
+                                        <li class="article__tags--elem">
+                                            <span class="article__tags--name">
+                                                Development
+                                            </span>
+                                            <button class="article__tags--close-btn" type="button"></button>
+                                            <button class="article__tags--edit-btn" type="button"></button>
+                                        </li>
+                                        <li class="article__tags--elem">
+                                            <span class="article__tags--name">
+                                                Woman
+                                            </span>
+                                            <button class="article__tags--close-btn" type="button"></button>
+                                            <button class="article__tags--edit-btn" type="button"></button>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <div class="article__tags--item">
+                                    <h3 class="article__tags--min-title">
+                                        Individual people:
                                     </h3>
-                                    <div class="article__item--text">
-                                        Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc,
-                                    </div>
-                                    <a href="#" class="article__item--link">
-                                        Read
-                                    </a>
-                                </li>
-                                <li class="article__aside--item article__item" data-aos="fade-left" data-aos-delay="600">
-                                    <h3 class="article__item--title">
-                                        Article title. Ultricies nec, pellentesque eu, pretium quis, sem. 
-                                    </h3>
-                                    <div class="article__item--text">
-                                        Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc,
-                                    </div>
-                                    <a href="#" class="article__item--link">
-                                        Read
-                                    </a>
-                                </li>
-                                <li class="article__aside--item article__item" data-aos="fade-left" data-aos-delay="800">
-                                    <h3 class="article__item--title">
-                                        Article title. Ultricies nec, pellentesque eu, pretium quis, sem. 
-                                    </h3>
-                                    <div class="article__item--text">
-                                        Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc,
-                                    </div>
-                                    <a href="#" class="article__item--link">
-                                        Read
-                                    </a>
-                                </li>
-                            </ul>
+                                    <ul class="article__tags--list" id="tags-list-2">
+                                        <li class="article__tags--elem">
+                                            <span class="article__tags--name">
+                                                Woman
+                                            </span>
+                                            <button class="article__tags--close-btn" type="button"></button>
+                                            <button class="article__tags--edit-btn" type="button"></button>
+                                        </li>
+                                        <li class="article__tags--elem">
+                                            <span class="article__tags--name">
+                                                Development
+                                            </span>
+                                            <button class="article__tags--close-btn" type="button"></button>
+                                            <button class="article__tags--edit-btn" type="button"></button>
+                                        </li>
+                                        <li class="article__tags--elem">
+                                            <span class="article__tags--name">
+                                                Development
+                                            </span>
+                                            <button class="article__tags--close-btn" type="button"></button>
+                                            <button class="article__tags--edit-btn" type="button"></button>
+                                        </li>
+                                        <li class="article__tags--elem">
+                                            <span class="article__tags--name">
+                                                Woman
+                                            </span>
+                                            <button class="article__tags--close-btn" type="button"></button>
+                                            <button class="article__tags--edit-btn" type="button"></button>
+                                        </li>
+                                        <li class="article__tags--elem">
+                                            <span class="article__tags--name">
+                                                Woman
+                                            </span>
+                                            <button class="article__tags--close-btn" type="button"></button>
+                                            <button class="article__tags--edit-btn" type="button"></button>
+                                        </li>
+                                        <li class="article__tags--elem">
+                                            <span class="article__tags--name">
+                                                Development
+                                            </span>
+                                            <button class="article__tags--close-btn" type="button"></button>
+                                            <button class="article__tags--edit-btn" type="button"></button>
+                                        </li>
+                                        <li class="article__tags--elem">
+                                            <span class="article__tags--name">
+                                                Development
+                                            </span>
+                                            <button class="article__tags--close-btn" type="button"></button>
+                                            <button class="article__tags--edit-btn" type="button"></button>
+                                        </li>
+                                        <li class="article__tags--elem">
+                                            <span class="article__tags--name">
+                                                Woman
+                                            </span>
+                                            <button class="article__tags--close-btn" type="button"></button>
+                                            <button class="article__tags--edit-btn" type="button"></button>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
                         </aside>
                     </div>
                 </div>
