--- a/app/countries-2.html
+++ b/app/countries-2.html
@@ -38,6 +38,20 @@
                         <h1 class="search__title main-title decor-line">
                             <span class="decor-span" data-decor-delay="0.0s"><span>Search by country</span></span>
                         </h1>
+                        <div class="search__form--tab search__tab" data-aos="fade-right" data-aos-duration="1000">
+                            <ul class="search__tab--list">
+                                <li class="search__tab--item">
+                                    <a href="#" class="search__tab--btn _active">
+                                        Search by people
+                                    </a>
+                                </li>
+                                <li class="search__tab--item">
+                                    <a href="#" class="search__tab--btn">
+                                        Choose a connection (32 165)
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
                         <div class="search__form--row">
                             <div class="search__form--item" data-aos="fade-down" data-aos-duration="1000" data-aos-anchor=".search__form">
                                 <div class="search__form--select-wrapper select-wrapper">
