--- a/app/html/_search-cards-2.html
+++ b/app/html/_search-cards-2.html
@@ -1,6 +1,6 @@
 <li class="search__card" data-aos="zoom-out" data-aos-duration="1000">
-    <a href="#" class="search__card--body">
-        <div class="search__card--header">
+    <div class="search__card--body">
+        <a href="#" class="search__card--header">
             <div class="search__card--icon">
                 <img src="img/industry.svg" alt="" width="50" height="50" loading="lazy">
             </div>
@@ -11,7 +11,7 @@
                     <span>0700000327</span>
                 </div>
             </div>
-        </div>
+        </a>
         <div class="search__card--content">
             <ul>
                 <li>
@@ -20,11 +20,19 @@
                 </li>
             </ul>
         </div>
-    </a>
+        <div class="search__card--add-info">
+            <ul>
+                <li>
+                    <b>“Radio 44” LLC</b>
+                    <b>1325842359</b>
+                </li>
+            </ul>
+        </div>
+    </div>
 </li>
 <li class="search__card" data-aos="zoom-out" data-aos-duration="1000">
-    <a href="#" class="search__card--body">
-        <div class="search__card--header">
+    <div class="search__card--body">
+        <a href="#" class="search__card--header">
             <div class="search__card--icon">
                 <img src="img/industry.svg" alt="" width="50" height="50" loading="lazy">
             </div>
@@ -35,7 +43,7 @@
                     <span>NONAME Agency SA</span>
                 </div>
             </div>
-        </div>
+        </a>
         <div class="search__card--content">
             <ul>
                 <li>
@@ -44,11 +52,19 @@
                 </li>
             </ul>
         </div>
-    </a>
+        <div class="search__card--add-info">
+            <ul>
+                <li>
+                    <b>“Radio 44” LLC</b>
+                    <b>1325842359</b>
+                </li>
+            </ul>
+        </div>
+    </div>
 </li>
 <li class="search__card" data-aos="zoom-out" data-aos-duration="1000">
-    <a href="#" class="search__card--body">
-        <div class="search__card--header">
+    <div class="search__card--body">
+        <a href="#" class="search__card--header">
             <div class="search__card--icon">
                 <img src="img/industry.svg" alt="" width="50" height="50" loading="lazy">
             </div>
@@ -59,7 +75,7 @@
                     <span>0700000327</span>
                 </div>
             </div>
-        </div>
+        </a>
         <div class="search__card--content">
             <ul>
                 <li>
@@ -68,11 +84,19 @@
                 </li>
             </ul>
         </div>
-    </a>
+        <div class="search__card--add-info">
+            <ul>
+                <li>
+                    <b>“Radio 44” LLC</b>
+                    <b>1325842359</b>
+                </li>
+            </ul>
+        </div>
+    </div>
 </li>
 <li class="search__card" data-aos="zoom-out" data-aos-duration="1000">
-    <a href="#" class="search__card--body">
-        <div class="search__card--header">
+    <div class="search__card--body">
+        <a href="#" class="search__card--header">
             <div class="search__card--icon">
                 <img src="img/industry.svg" alt="" width="50" height="50" loading="lazy">
             </div>
@@ -83,7 +107,7 @@
                     <span>NONAME Agency SA</span>
                 </div>
             </div>
-        </div>
+        </a>
         <div class="search__card--content">
             <ul>
                 <li>
@@ -92,5 +116,13 @@
                 </li>
             </ul>
         </div>
-    </a>
+        <div class="search__card--add-info">
+            <ul>
+                <li>
+                    <b>“Radio 44” LLC</b>
+                    <b>1325842359</b>
+                </li>
+            </ul>
+        </div>
+    </div>
 </li>
