--- a/app/html/_search-cards.html
+++ b/app/html/_search-cards.html
@@ -1,6 +1,6 @@
 <li class="search__card" data-aos="zoom-out" data-aos-duration="1000">
-    <a href="#" class="search__card--body">
-        <div class="search__card--header">
+    <div class="search__card--body">
+        <a href="#" class="search__card--header">
             <div class="search__card--avatar">
                 <picture>
                     <source srcset="img/avatar-1.webp" type="image/webp">
@@ -14,7 +14,7 @@
                     <span>03/14/2004</span>
                 </div>
             </div>
-        </div>
+        </a>
         <div class="search__card--content">
             <ul>
                 <li>
@@ -31,11 +31,17 @@
                 </li>
             </ul>
         </div>
-    </a>
+        <div class="search__card--add-info">
+            <p>Marina Vladimirovna Andriyanova</p>
+            <p>05/08/1962</p>
+            <p>National PEP</p>
+            <p>Election Commission of the Sakhalin Region, member of the commission, secretary (member of the commission, secretary)</p>
+        </div>
+    </div>
 </li>
 <li class="search__card" data-aos="zoom-out" data-aos-duration="1000">
-    <a href="#" class="search__card--body">
-        <div class="search__card--header">
+    <div class="search__card--body">
+        <a href="#" class="search__card--header">
             <div class="search__card--avatar">
                 <picture>
                     <source srcset="img/avatar-2.webp" type="image/webp">
@@ -45,7 +51,7 @@
             <div class="search__card--info">
                 <h3>Kichigin <br> Evgeny Alexandrovich</h3>
             </div>
-        </div>
+        </a>
         <div class="search__card--content">
             <ul>
                 <li>
@@ -54,11 +60,17 @@
                 </li>
             </ul>
         </div>
-    </a>
+        <div class="search__card--add-info">
+            <p>Marina Vladimirovna Andriyanova</p>
+            <p>05/08/1962</p>
+            <p>National PEP</p>
+            <p>Election Commission of the Sakhalin Region, member of the commission, secretary (member of the commission, secretary)</p>
+        </div>
+    </div>
 </li>
 <li class="search__card" data-aos="zoom-out" data-aos-duration="1000">
-    <a href="#" class="search__card--body">
-        <div class="search__card--header">
+    <div class="search__card--body">
+        <a href="#" class="search__card--header">
             <div class="search__card--avatar">
                 <picture>
                     <source srcset="img/avatar-1.webp" type="image/webp">
@@ -72,7 +84,7 @@
                     <span>03/14/2004</span>
                 </div>
             </div>
-        </div>
+        </a>
         <div class="search__card--content">
             <p>
                 Last position: OGKU "Apparatus of the Public Chamber of the Ivanovo Region", Deputy Chairman of the Public Monitoring Commission for the implementation of public control over the provision of human rights in places of detention and assistance to persons in places of detention
@@ -84,11 +96,17 @@
                 </li>
             </ul>
         </div>
-    </a>
+        <div class="search__card--add-info">
+            <p>Marina Vladimirovna Andriyanova</p>
+            <p>05/08/1962</p>
+            <p>National PEP</p>
+            <p>Election Commission of the Sakhalin Region, member of the commission, secretary (member of the commission, secretary)</p>
+        </div>
+    </div>
 </li>
 <li class="search__card" data-aos="zoom-out" data-aos-duration="1000">
-    <a href="#" class="search__card--body">
-        <div class="search__card--header">
+    <div class="search__card--body">
+        <a href="#" class="search__card--header">
             <div class="search__card--avatar">
                 <picture>
                     <source srcset="img/avatar-2.webp" type="image/webp">
@@ -102,11 +120,17 @@
                     <span>23.08.1955</span>
                 </div>
             </div>
-        </div>
+        </a>
         <div class="search__card--content">
             <p>
                 Last position: Election Commission of the Magadan Region, member of the commission
             </p>
         </div>
-    </a>
+        <div class="search__card--add-info">
+            <p>Marina Vladimirovna Andriyanova</p>
+            <p>05/08/1962</p>
+            <p>National PEP</p>
+            <p>Election Commission of the Sakhalin Region, member of the commission, secretary (member of the commission, secretary)</p>
+        </div>
+    </div>
 </li>
