--- a/app/html/_subs-card.html
+++ b/app/html/_subs-card.html
@@ -24,6 +24,79 @@
                 </li>
             </ul>
         </div>
+        <div class="personal-area__subscriptions-card--notification">
+            <h5>
+                Notification to receive:
+            </h5>
+            <div class="personal-area__subscriptions-card--checkbox">
+                <label>
+                    <input type="radio" name="notification" value="instant" checked>
+                    <span>Instant notification</span>
+                </label>
+            </div>
+            <div class="personal-area__subscriptions-card--checkbox">
+                <label>
+                    <input type="radio" name="notification">
+                    <span>Once a day</span>
+                </label>
+                <div class="personal-area__subscriptions-card--min-row">
+                    <div class="personal-area__subscriptions-card--min-select">
+                        <span>Select time:</span>
+                        <div>
+                            <select name="once-day-time">
+                                <option value="09:00" selected>09:00</option>
+                                <option value="10:00">10:00</option>
+                                <option value="11:00">11:00</option>
+                                <option value="12:00">12:00</option>
+                                <option value="13:00">13:00</option>
+                                <option value="14:00">14:00</option>
+                                <option value="15:00">15:00</option>
+                                <option value="16:00">16:00</option>
+                                <option value="17:00">17:00</option>
+                                <option value="18:00">18:00</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="personal-area__subscriptions-card--checkbox">
+                <label>
+                    <input type="radio" name="notification" value="once-week">
+                    <span>Once a week</span>
+                </label>
+                <div class="personal-area__subscriptions-card--min-row">
+                    <div class="personal-area__subscriptions-card--min-select">
+                        <span>Select day:</span>
+                        <div>
+                            <select name="once-week-day">
+                                <option value="Mon" selected>Mon</option>
+                                <option value="Thu">Thu</option>
+                                <option value="Wed">Wed</option>
+                                <option value="Tue">Tue</option>
+                                <option value="Fri">Fri</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="personal-area__subscriptions-card--min-select">
+                        <span>Select time:</span>
+                        <div>
+                            <select name="once-week-time">
+                                <option value="09:00" selected>09:00</option>
+                                <option value="10:00">10:00</option>
+                                <option value="11:00">11:00</option>
+                                <option value="12:00">12:00</option>
+                                <option value="13:00">13:00</option>
+                                <option value="14:00">14:00</option>
+                                <option value="15:00">15:00</option>
+                                <option value="16:00">16:00</option>
+                                <option value="17:00">17:00</option>
+                                <option value="18:00">18:00</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="personal-area__subscriptions-card--footer">
             <a href="#" class="personal-area__subscriptions-card--btn">
                 Buy
