--- a/app/index.html
+++ b/app/index.html
@@ -38,9 +38,30 @@
                         Base of suspicious persons in Russia, Ukraine, Belarus, Kazakhstan here:
                     </div>
                     <form action="#" class="database__form" data-aos="fade-right"  data-aos-duration="750">
-                        <label class="database__label">
-                            <input type="text" name="key" placeholder="Enter the name of the person or company" required class="database__input">
-                        </label>
+                        <div class="database__form--body">
+                            <label class="database__label">
+                                <input type="text" name="key" placeholder="Enter the name of the person or company" required class="database__input search-list-input">
+                            </label>
+                            <div class="database__search-list search-list">
+                                <ul>
+                                    <li>
+                                        First Name Last Name
+                                    </li>
+                                    <li>
+                                        First Name Last Name
+                                    </li>
+                                    <li>
+                                        First Name Last Name
+                                    </li>
+                                    <li>
+                                        First Name Last Name
+                                    </li>
+                                    <li>
+                                        First Name Last Name
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
                         <button class="database__btn" type="submit">
                             Verify
                         </button>
