--- a/app/countries-search-result-2.html
+++ b/app/countries-search-result-2.html
@@ -40,13 +40,13 @@
                         </h1>
                         <div class="search__form--row">
                             <div class="search__form--item" data-aos="fade-down" data-aos-duration="1000" data-aos-anchor=".search__form">
-                                <label class="search__form--date date">
-                                    <input type="date" class="date__input" name="date">
+                                <label class="search__form--date custom-date">
+                                    <input type="text" class="custom-date__input _large" name="date-start" placeholder="дд.мм.гггг">
                                 </label>
                             </div>
                             <div class="search__form--item" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="400" data-aos-anchor=".search__form">
-                                <label class="search__form--date date">
-                                    <input type="date" class="date__input" name="date">
+                                <label class="search__form--date custom-date">
+                                    <input type="text" class="custom-date__input _large" name="date-end" placeholder="дд.мм.гггг">
                                 </label>
                             </div>
                             <div class="search__form--item _full" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="800" data-aos-anchor=".search__form">
