--- a/app/index.html
+++ b/app/index.html
@@ -39,32 +39,88 @@
                     </div>
                     <form action="#" class="database__form" data-aos="fade-right"  data-aos-duration="750">
                         <div class="database__form--body">
-                            <label class="database__label">
-                                <input type="text" name="key" placeholder="Enter the name of the person or company" required class="database__input search-list-input">
-                            </label>
-                            <div class="database__search-list search-list">
-                                <ul>
-                                    <li>
-                                        First Name Last Name
-                                    </li>
-                                    <li>
-                                        First Name Last Name
-                                    </li>
-                                    <li>
-                                        First Name Last Name
-                                    </li>
-                                    <li>
-                                        First Name Last Name
-                                    </li>
-                                    <li>
-                                        First Name Last Name
-                                    </li>
-                                </ul>
+                            <div class="database__form--item">
+                                <div class="database__form--item-body search-list-wrapper">
+                                    <label class="database__label">
+                                        <input type="text" name="surname" placeholder="Surname" autocomplete="off" required class="database__input search-list-input">
+                                    </label>
+                                    <div class="database__search-list search-list">
+                                        <ul>
+                                            <li>
+                                                Lorem ipsum dolor
+                                            </li>
+                                            <li>
+                                                Lorem
+                                            </li>
+                                            <li>
+                                                ipsum
+                                            </li>
+                                            <li>
+                                                dolor 
+                                            </li>
+                                            <li>
+                                                sit
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="database__form--item">
+                                <div class="database__form--item-body search-list-wrapper">
+                                    <label class="database__label">
+                                        <input type="text" name="name" placeholder="Name" autocomplete="off" required class="database__input search-list-input">
+                                    </label>
+                                    <div class="database__search-list search-list">
+                                        <ul>
+                                            <li>
+                                                Lorem ipsum dolor
+                                            </li>
+                                            <li>
+                                                Lorem
+                                            </li>
+                                            <li>
+                                                ipsum
+                                            </li>
+                                            <li>
+                                                dolor 
+                                            </li>
+                                            <li>
+                                                sit
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="database__form--item">
+                                <div class="database__form--item-body search-list-wrapper">
+                                    <label class="database__label">
+                                        <input type="text" name="company" placeholder="Company" autocomplete="off" required class="database__input search-list-input">
+                                    </label>
+                                    <div class="database__search-list search-list">
+                                        <ul>
+                                            <li>
+                                                Lorem ipsum dolor
+                                            </li>
+                                            <li>
+                                                Lorem
+                                            </li>
+                                            <li>
+                                                ipsum
+                                            </li>
+                                            <li>
+                                                dolor 
+                                            </li>
+                                            <li>
+                                                sit
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <button class="database__btn" type="submit">
+                                    Verify
+                                </button>
                             </div>
                         </div>
-                        <button class="database__btn" type="submit">
-                            Verify
-                        </button>
                     </form>
                 </div>
             </section>
